# PlaywrightDemo

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-playwright.yml
api/: __init__.py  sample_api.py
config/: __init__.py  config.yaml
docs/: framework-conventions.md  onboarding.md
pages/: __init__.py  base_page.py
tests/: __init__.py  base_test.py  conftest.py
tests/ai/: test_ai_sample.py
tests/api/: test_api_health.py
tests/data/: sample_test_data.yaml
tests/ui/: test_home_page.py
utils/: __init__.py  ai_client.py  config_reader.py  http_client.py  logger_util.py
