[tool.poetry]
name = "playwright-demo"
version = "0.1.0"
description = "Enterprise-ready Playwright automation framework template"
authors = ["Automation Team <automation@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
pytest = "^8.0.0"
pyyaml = "^7.0"
requests = "^2.31.0"
pytest-html = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
